// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TruncateMiddleDynamic > should render 1`] = `
<DocumentFragment>
  <span
    class="overflow-hidden min-w-0 no-ligatures"
  >
    Lorem ipsum dolor sit amet consectetur adipisicing elit.
  </span>
</DocumentFragment>
`;

exports[`TruncateMiddleDynamic > should return the value if it fits the given container 1`] = `
<DocumentFragment>
  <span
    class="overflow-hidden min-w-0 no-ligatures"
  >
    Lorem ipsum dolor sit amet consectetur adipisicing elit.
  </span>
</DocumentFragment>
`;

exports[`TruncateMiddleDynamic > should return the value if it overflows the given container 1`] = `
<DocumentFragment>
  <span
    class="overflow-hidden min-w-0 no-ligatures"
  >
    Lorem ipsum dolor sit amet consectetur adipisicing elit.
  </span>
</DocumentFragment>
`;

exports[`TruncateMiddleDynamic > should return the value if the elements have no width 1`] = `
<DocumentFragment>
  <span
    class="overflow-hidden min-w-0 no-ligatures"
  >
    Lorem ipsum dolor sit amet consectetur adipisicing elit.
  </span>
</DocumentFragment>
`;

exports[`TruncateMiddleDynamic > should truncate value if doesn't overflow and availableWidth is set 1`] = `
<DocumentFragment>
  <span
    class="overflow-hidden min-w-0 no-ligatures"
  >
    L….
  </span>
</DocumentFragment>
`;

exports[`TruncateMiddleDynamic > should truncate value if it overflows and availableWidth is set 1`] = `
<DocumentFragment>
  <span
    class="overflow-hidden min-w-0 no-ligatures"
  >
    D…b
  </span>
</DocumentFragment>
`;
